# libxmtp

./: Cargo.toml
apps/cli/: Cargo.toml  cli_client.rs  debug.rs  lib.rs  serializable.rs
apps/xnet/lib/src/app/: service_manager.rs
bindings/wasm/: README.md
bindings/wasm/src/: client.rs
crates/xmtp_rs/: Cargo.toml
crates/xmtp_rs/src/: lib.rs
docs/: error_glossary.md
sdks/xmtp-rs/: Cargo.toml
sdks/xmtp-rs/src/: lib.rs  serializable.rs
