[package]
name = "xmtp_rs"
license.workspace = true
version.workspace = true
rust-version.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true, features = ["signer-mnemonic"] }
anyhow.workspace = true
chrono.workspace = true
xmtp_cli = { path = "../../apps/cli" }
prost.workspace = true
serde.workspace = true
valuable.workspace = true
xmtp_api.workspace = true
xmtp_api_d14n.workspace = true
xmtp_common.workspace = true
xmtp_configuration.workspace = true
xmtp_content_types.workspace = true
xmtp_cryptography.workspace = true
xmtp_db.workspace = true
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto.workspace = true

[lints]
workspace = true
